--- a/src/components/Measurement/index.module.less
+++ b/src/components/Measurement/index.module.less
@@ -1,5 +1,5 @@
 .measurement {
-  gap: 4px;
+  gap: 8px 4px;
   flex: 1;
   flex-wrap: wrap;
 
@@ -65,10 +65,6 @@
 
         .focus {
           // background-color: #202735;
-        }
-
-        .bgColor {
-          background-color: #273142;
         }
       }
     }
