--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -216,6 +216,7 @@
                     width: 100%;
                     background-color: rgba(144, 144, 144, .6);
                     padding: 24px;
+                    font-weight: bold;
                   }
                 }
 
@@ -223,6 +224,7 @@
                   width: 100%;
                   line-height: 1;
                   text-align: center;
+                  font-weight: bold;
                 }
               }
 
