--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -178,69 +178,65 @@
     }
 
     .case-list-modal {
-      .ant-modal {
-        .ant-modal-content {
-          .ant-modal-body {
-            height: calc(100% - 56px);
+      .ant-modal-body {
+        height: calc(100% - 32px);
+        width: 100%;
+        overflow-y: auto;
 
-            .case-body {
-              height: 100%;
+        .case-body {
+          height: auto;
+          flex-wrap: wrap;
+          gap: 8px;
+
+          .case-item-box {
+            width: 294px;
+            height: 220px;
+            cursor: pointer;
+
+            &-img {
+              height: 184px;
               width: 100%;
-              overflow-y: auto;
+              background-color: rgba(144, 144, 144, .3);
+              margin-bottom: 8px;
+              position: relative;
+              overflow: hidden;
 
-              .case-item-box {
-                width: 300px;
-                height: 220px;
-                padding: 8px;
-                float: left;
-                cursor: pointer;
-
-                &-img {
-                  height: 180px;
-                  width: 100%;
-                  background-color: rgba(144, 144, 144, .3);
-                  margin-bottom: 8px;
-                  position: relative;
-                  overflow: hidden;
-
-                  img {
-                    height: 100%;
-                    width: 100%;
-                    transition: all 1s;
-                  }
-
-                  &-info {
-                    position: absolute;
-                    opacity: 0;
-                    height: 100%;
-                    width: 100%;
-                    background-color: rgba(144, 144, 144, .6);
-                    padding: 24px;
-                    font-weight: bold;
-                  }
-                }
-
-                &-title {
-                  width: 100%;
-                  line-height: 1;
-                  text-align: center;
-                  font-weight: bold;
-                }
+              img {
+                height: 100%;
+                width: 100%;
+                transition: all 1s;
               }
 
-              .case-item-box:hover {
-                background-color: rgba(144, 144, 144, .1);
-
-                .case-item-box-img {
-                  img {
-                    transform: scale(1.1);
-                  }
-                }
-
-                .case-item-box-img-info {
-                  opacity: 1;
-                }
+              &-info {
+                position: absolute;
+                opacity: 0;
+                height: 100%;
+                width: 100%;
+                background-color: rgba(144, 144, 144, .6);
+                padding: 24px;
+                font-weight: bold;
               }
+            }
+
+            &-title {
+              width: 100%;
+              line-height: 1;
+              text-align: center;
+              font-weight: bold;
+            }
+          }
+
+          .case-item-box:hover {
+            background-color: rgba(144, 144, 144, .1);
+
+            .case-item-box-img {
+              img {
+                transform: scale(1.1);
+              }
+            }
+
+            .case-item-box-img-info {
+              opacity: 1;
             }
           }
         }
