--- a/src/pages/Software/index.module.less
+++ b/src/pages/Software/index.module.less
@@ -2,6 +2,131 @@
   padding: 16px 32px 8px;
   height: 100%;
 
+  :global {
+    .alert-page-body {
+      height: calc(100% - 70px);
+      margin: -12px;
+      overflow-y: auto;
+
+      &-wrap {
+        flex-wrap: wrap;
+        gap: 16px;
+
+        .box-animation {
+
+          &::before,
+          &::after {
+            opacity: 0;
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-radius: 10px;
+            transition: .5s ease-in-out;
+            border: 2px solid #1890FF;
+          }
+
+          &::before {
+            top: 0;
+            left: 0;
+            border-bottom: 0;
+            border-right: 0;
+          }
+
+          &::after {
+            right: 0;
+            bottom: 0;
+            border-top: 0;
+            border-left: 0;
+          }
+
+          &:hover::before,
+          &:hover::after {
+            opacity: 1;
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        .item-box {
+          width: 280px;
+          height: 90px;
+          border-radius: 8px;
+          cursor: pointer;
+          padding: 12px;
+          position: relative;
+
+          .item-box-child {
+            width: 100%;
+            height: 100%;
+            padding: 0 12px;
+            // border: 1px solid rgba(100, 100, 100, 0.2);
+            border-radius: inherit;
+            box-shadow: 3px 3px 10px 3px rgba(118, 118, 118, 0.3);
+            position: relative;
+
+            &-left {
+              width: calc(100% - 40px);
+              padding: 12px 0;
+              z-index: 10;
+
+              .item-icon {
+                width: 40px;
+                min-width: 40px;
+                height: 40px;
+                min-height: 40px;
+                border-radius: 8px;
+                overflow: hidden;
+                opacity: .8;
+
+                img {
+                  height: 80%;
+                  width: 80%;
+                }
+              }
+
+              .item-bottom {
+                font-style: normal;
+                font-weight: 400;
+                width: calc(100% - 40px);
+                padding: 12px 8px;
+                justify-content: space-between;
+
+                .title {
+                  font-size: 18px;
+                  flex: 1;
+                }
+
+                .time {
+                  font-size: 14px;
+                  width: 160px;
+                  opacity: .7;
+                }
+
+              }
+            }
+
+            .item-badge {
+              position: absolute;
+              right: 12px;
+              top: 12px;
+              text-align: right;
+              font-size: 18px;
+              width: 30px;
+              height: 30px;
+              z-index: 10;
+            }
+          }
+        }
+
+        .add-box {
+          font-size: 60px;
+          max-width: 90px;
+        }
+      }
+    }
+  }
+
   @media (prefers-color-scheme: dark) {
     :global {
       .alert-page-body {
@@ -43,154 +168,6 @@
           // &:hover {
           //   background-color: #d7d7d7;
           // }
-        }
-      }
-    }
-  }
-
-  :global {
-    .alert-page-body {
-      height: calc(100% - 70px);
-      margin: -12px;
-      overflow-y: auto;
-
-      .box-animation {
-
-        &::before,
-        &::after {
-          opacity: 0;
-          content: "";
-          position: absolute;
-          width: 0;
-          height: 0;
-          border-radius: 10px;
-          transition: .5s ease-in-out;
-          border: 2px solid #1890FF;
-        }
-
-        &::before {
-          top: 0;
-          left: 0;
-          border-bottom: 0;
-          border-right: 0;
-        }
-
-        &::after {
-          right: 0;
-          bottom: 0;
-          border-top: 0;
-          border-left: 0;
-        }
-
-        &:hover::before,
-        &:hover::after {
-          opacity: 1;
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      .item-box {
-        width: 300px;
-        height: 90px;
-        border-radius: 8px;
-        cursor: pointer;
-        float: left;
-        margin: 0 12px 12px 0;
-        padding: 12px;
-        position: relative;
-
-        .item-box-child {
-          width: 100%;
-          height: 100%;
-          padding: 0 12px;
-          // border: 1px solid rgba(100, 100, 100, 0.2);
-          border-radius: inherit;
-          box-shadow: 3px 3px 10px 3px rgba(118, 118, 118, 0.3);
-          position: relative;
-
-          &-left {
-            width: calc(100% - 40px);
-            padding: 12px 0;
-            z-index: 10;
-
-            .item-icon {
-              width: 40px;
-              min-width: 40px;
-              height: 40px;
-              min-height: 40px;
-              border-radius: 8px;
-              overflow: hidden;
-              opacity: .8;
-
-              img {
-                height: 80%;
-                width: 80%;
-              }
-            }
-
-            .item-bottom {
-              font-style: normal;
-              font-weight: 400;
-              width: calc(100% - 40px);
-              padding: 12px 8px;
-              justify-content: space-between;
-
-              .title {
-                font-size: 18px;
-                flex: 1;
-              }
-
-              .time {
-                font-size: 14px;
-                width: 160px;
-                opacity: .7;
-              }
-
-            }
-          }
-
-          .item-badge {
-            position: absolute;
-            right: 12px;
-            top: 12px;
-            text-align: right;
-            font-size: 18px;
-            width: 30px;
-            height: 30px;
-            z-index: 10;
-          }
-        }
-      }
-
-      .add-box {
-        font-size: 60px;
-        max-width: 90px;
-      }
-
-    }
-  }
-}
-
-:global {
-  .plugin-manager-modal {
-
-    .ant-modal-body {
-
-      .plugin-manager-modal-body {
-        .flex-box-justify-between {
-          line-height: 32px;
-        }
-
-        .upload-delete-icon {
-          font-size: 14px;
-        }
-
-        .ant-form {
-          .ant-form-item-label>label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
-            display: none;
-          }
-
         }
       }
     }
