--- a/src/index.less
+++ b/src/index.less
@@ -18,7 +18,7 @@
   font-weight: 400;
 
   line-height: 1.5;
-
+  user-select: none;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -139,7 +139,6 @@ code {
 
 .ant-layout {
   height: 100%;
-  user-select: none;
 }
 
 .ant-spin-nested-loading {
@@ -160,10 +159,6 @@ code {
     height: 100%;
     width: 100%;
   }
-}
-
-.ant-dropdown-menu {
-  user-select: none;
 }
 
 .ant-input-disabled {
@@ -206,6 +201,10 @@ code {
   .ant-switch-handle::before {
     background-color: #177ddc !important;
   }
+}
+
+.ant-popover {
+  user-select: none;
 }
 
 .ant-btn:disabled {
