--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -73,7 +73,7 @@
               line-height: 1;
               margin-bottom: 8px;
               padding: 8px;
-              background-color: rgba(144, 144, 144, 0.2);
+              background-color: rgba(144, 144, 144, .2);
 
               .ant-form-item {
                 margin-bottom: 0;
@@ -95,6 +95,21 @@
                 }
               }
             }
+
+            &-group {
+              background-color: rgba(144, 144, 144, .2);
+              margin-bottom: 12px;
+
+              &-title {
+                width: 100%;
+                font-weight: bold;
+                padding: 8px;
+              }
+
+              &-body {
+                padding: 8px;
+              }
+            }
           }
         }
       }
@@ -109,6 +124,16 @@
 
     @media (prefers-color-scheme: light) {
       .config-panel-left {
+        &-body {
+          .config-panel-left-body-panel {
+            &-group {
+              &-body {
+                border-top: 2px solid rgb(255, 255, 255);
+              }
+            }
+          }
+        }
+
         &-footer {
           // box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
           border-top: 2px solid rgba(144, 144, 144, 0.1);
@@ -118,6 +143,16 @@
 
     @media (prefers-color-scheme: dark) {
       .config-panel-left {
+        &-body {
+          .config-panel-left-body-panel {
+            &-group {
+              &-body {
+                border-top: 2px solid rgb(82, 82, 82);
+              }
+            }
+          }
+        }
+
         &-footer {
           // box-shadow: 0 -1px 4px 1px rgba(255, 255, 255, 0.2);
           border-top: 2px solid rgba(144, 144, 144, 0.2);
