--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -2,5 +2,18 @@
   width: 100%;
   height: 100%;
 
-  :global {}
+
+  :global {
+    .ccd-main-box {
+      position: relative;
+      overflow: auto;
+
+      .move-item {
+        position: absolute;
+        overflow: hidden;
+        background-color: rgba(144, 144, 144, .3);
+        z-index: 1;
+      }
+    }
+  }
 }
