--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -4,15 +4,51 @@
 
 
   :global {
-    .ccd-main-box {
-      position: relative;
+    .ccd-page-header-box {
+      height: 32px;
+      min-height: 32px;
+      max-height: 32px;
+      padding: 0 16px;
+      border-bottom: 1px solid rgba(144, 144, 144, .3);
+    }
+
+    .ccd-page-body-box {
+      height: calc(100% - 64px);
       overflow: auto;
 
-      .move-item {
-        position: absolute;
-        overflow: hidden;
-        background-color: rgba(144, 144, 144, .3);
-        z-index: 1;
+      .ccd-main-box {
+        position: relative;
+        background-color: rgba(144, 144, 144, .1);
+        width: 100%;
+        height: 100%;
+
+        .move-item {
+          position: absolute;
+          overflow: hidden;
+          background-color: rgba(144, 144, 144, .2);
+          border: 2px solid transparent;
+          z-index: 1;
+        }
+      }
+    }
+
+    .ccd-page-footer-box {
+      height: 32px;
+      min-height: 32px;
+      max-height: 32px;
+
+      border-top: 1px solid rgba(144, 144, 144, .3);
+    }
+
+    @media (prefers-color-scheme: light) {
+      .ccd-page-footer-box {
+        background-color: rgb(255, 255, 255);
+      }
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .ccd-page-footer-box {
+        background-color: rgb(0, 0, 0);
       }
     }
   }
