--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -67,7 +67,7 @@
                 overflow: auto;
 
                 &-item {
-                  padding: 8px;
+                  padding: 16px 8px;
                   cursor: pointer;
                 }
               }
@@ -118,6 +118,37 @@
             position: absolute;
             overflow: hidden;
             border: 2px solid transparent;
+            // background-color: rgba(144, 144, 144, .1);
+          }
+        }
+
+        &-config-panel {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: 0;
+          width: 400px;
+
+          &-title {
+            width: 100%;
+            padding: 8px 16px;
+            font-weight: bold;
+            font-size: 16px;
+            border-bottom: 1px solid rgba(144, 144, 144, .2);
+          }
+
+          &-body {
+            height: 100%;
+            width: 100%;
+            padding: 0 16px;
+            overflow: auto;
+          }
+
+          &-footer {
+            width: 100%;
+            padding: 4px 16px;
+            gap: 16px;
+            border-top: 1px solid rgba(144, 144, 144, .2);
           }
         }
       }
@@ -163,6 +194,10 @@
               background-color: rgb(213, 213, 213);
             }
           }
+
+          &-config-panel {
+            background-color: #fff;
+          }
         }
       }
 
@@ -188,6 +223,10 @@
             .move-item {
               background-color: rgb(35, 35, 35);
             }
+          }
+
+          &-config-panel {
+            background-color: #000;
           }
         }
       }
