--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -91,7 +91,7 @@
                   line-height: 30px;
                   width: 100%;
                   padding: 0 8px;
-                  background-color: rgba(144, 144, 144, .2);
+                  background-color: rgba(144, 144, 144, .1);
                 }
 
                 &-icon {
@@ -118,7 +118,21 @@
             position: absolute;
             overflow: hidden;
             border: 2px solid transparent;
-            // background-color: rgba(144, 144, 144, .1);
+
+            &-content-box {
+              height: 100%;
+              width: 100%;
+
+              &-title-box {
+                padding: 4px 8px;
+                border-bottom: 1px solid rgba(144, 144, 144, .2);
+              }
+
+              &-body-box {
+                height: 100%;
+                width: 100%;
+              }
+            }
           }
         }
 
@@ -128,6 +142,7 @@
           bottom: 0;
           right: 0;
           width: 400px;
+          z-index: 9999;
 
           &-title {
             width: 100%;
@@ -180,23 +195,23 @@
       .ccd-page-body-box {
         .ccd-main-box {
           &-plugin-panel {
-            background-color: #fff;
+            background-color: rgb(240, 240, 240);
 
             .font-selected-self {
-              background-color: #fff;
+              background-color: rgb(240, 240, 240);
             }
           }
 
           &-canvas {
-            background-color: rgb(225, 225, 225);
+            background-color: rgb(235, 235, 235);
 
             .move-item {
-              background-color: rgb(213, 213, 213);
+              background-color: rgb(230, 230, 230);
             }
           }
 
           &-config-panel {
-            background-color: #fff;
+            background-color: rgb(240, 240, 240);
           }
         }
       }
@@ -210,10 +225,10 @@
       .ccd-page-body-box {
         .ccd-main-box {
           &-plugin-panel {
-            background-color: #000;
+            background-color: rgb(15, 15, 15);
 
             .font-selected-self {
-              background-color: #000;
+              background-color: rgb(15, 15, 15);
             }
           }
 
@@ -226,7 +241,7 @@
           }
 
           &-config-panel {
-            background-color: #000;
+            background-color: rgb(15, 15, 15);
           }
         }
       }
