--- a/src/layouts/BasicLayout/components/header/index.module.less
+++ b/src/layouts/BasicLayout/components/header/index.module.less
@@ -1,9 +1,11 @@
 .basicLayoutHeader {
+  width: 100%;
   height: 30px;
   line-height: 30px;
-  padding: 0 10px;
+  position: relative;
 
   :global {
+
     .basic-layout-header-btn {
       font-size: 20px;
 
@@ -12,43 +14,18 @@
       }
     }
 
-    .basic-layout-header-title-box {
-      font-size: 16px;
-      font-weight: bolder;
-      margin-right: 8px;
+    .basic-layout-header-left-box {
+      margin-left: 16px;
+
+      .basic-layout-header-title-box {
+        font-size: 16px;
+        font-weight: bolder;
+        margin-right: 8px;
+      }
     }
 
-    .user-info-box {
-      height: 30px;
-      margin-right: 24px;
-      transition: all 1s;
-
-      &-name {
-        margin-left: 8px;
-      }
-
-      .user-info {
-        height: 30px;
-        white-space: nowrap;
-      }
-
-      .user-check {
-        height: 30px;
-      }
-
-      // &:hover {
-      //   .user-info {
-      //     opacity: 0;
-      //   }
-
-      //   .user-check {
-      //     opacity: 1;
-      //     margin-top: -30px;
-      //   }
-      // }
-    }
-
-    .operation-box {
+    .basic-layout-header-operation-box {
+      margin-right: 16px;
       gap: 4px;
 
       .basic-layout-header-btn {
@@ -62,4 +39,15 @@
       }
     }
   }
+}
+
+.floatHeaderBtn {
+  position: absolute;
+  top: 0;
+  left: 200px;
+  right: 8px;
+  height: 32px;
+  z-index: 9998;
+
+  :global {}
 }
