--- a/src/layouts/BasicLayout/index.module.less
+++ b/src/layouts/BasicLayout/index.module.less
@@ -1,14 +1,15 @@
 .basicLayoutWrapper {
   width: 100%;
   height: 100%;
+  position: relative;
 
   :global {
+
     .basic-layout {
       height: 100%;
       overflow: hidden;
 
-      .basic-layout-content {
-      }
+      .basic-layout-content {}
     }
 
   }
