--- a/src/pages/CCD/components/common.module.less
+++ b/src/pages/CCD/components/common.module.less
@@ -1,9 +1,16 @@
 .imageCharts {
   width: 100%;
   height: 100%;
-
+  overflow: hidden;
 
   :global {
+    .ant-image {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
     @media (prefers-color-scheme: light) {}
 
@@ -14,7 +21,7 @@
 .lineCharts {
   width: 100%;
   height: 100%;
-
+  overflow: hidden;
 
   :global {
 
@@ -22,4 +29,25 @@
 
     @media (prefers-color-scheme: dark) {}
   }
+}
+
+.videoCharts {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  :global {
+    video {
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
+
+.audioCharts {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  :global {}
 }
