--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -14,6 +14,7 @@
 
     .ccd-page-body-box {
       width: 100%;
+      height: 100%;
 
       .ccd-main-box {
         width: 100%;
@@ -28,14 +29,16 @@
           z-index: 1;
 
           &-search-box {
+            height: 32px;
+            line-height: 32px;
+
             .ant-input-outlined {
               border-left: 0;
             }
           }
 
           &-body {
-            flex: 1;
-            height: 100%;
+            height: calc(100% - 32px);
             width: 100%;
             font-size: 13px;
 
@@ -77,7 +80,7 @@
               flex: 1;
               height: 100%;
               overflow: auto;
-              padding: 16px 16px 32px;
+              padding: 16px 16px 0px;
 
               &-item {
                 height: 160px;
@@ -85,6 +88,11 @@
                 background-color: rgba(144, 144, 144, .1);
                 margin-bottom: 16px;
                 cursor: move;
+
+                &-drag-box {
+                  height: 100%;
+                  width: 100%;
+                }
 
                 &-title {
                   height: 30px;
@@ -97,7 +105,6 @@
                 &-icon {
                   width: 100%;
                   height: calc(100% - 30px);
-                  background-color: rgba(144, 144, 144, .1);
 
                   img,
                   .ant-image {
@@ -122,15 +129,29 @@
             &-content-box {
               height: 100%;
               width: 100%;
+              background-position: 50% 50%;
+              background-size: 100% 100%;
 
               &-title-box {
                 padding: 4px 8px;
                 border-bottom: 1px solid rgba(144, 144, 144, .2);
+
+                &-title-span {
+                  opacity: 0;
+                }
               }
 
               &-body-box {
                 height: 100%;
                 width: 100%;
+              }
+            }
+
+            &-content-box:hover {
+              .move-item-content-box-title-box {
+                &-title-span {
+                  opacity: 1;
+                }
               }
             }
           }
@@ -175,7 +196,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: radial-gradient(circle, #ccc 1px, transparent 1px);
+        background-image: radial-gradient(circle, rgba(144, 144, 144, .3) 1px, transparent 1px);
         background-size: 10px 10px;
         /* you can adjust the spacing of dots by changing these values */
         opacity: 0.5;
@@ -206,7 +227,9 @@
             background-color: rgb(235, 235, 235);
 
             .move-item {
-              background-color: rgb(230, 230, 230);
+              &-content-box {
+                background-color: rgb(230, 230, 230);
+              }
             }
           }
 
@@ -236,7 +259,9 @@
             background-color: rgb(20, 20, 20);
 
             .move-item {
-              background-color: rgb(35, 35, 35);
+              &-content-box {
+                background-color: rgb(35, 35, 35);
+              }
             }
           }
 
