--- a/src/layouts/BasicLayout/index.module.less
+++ b/src/layouts/BasicLayout/index.module.less
@@ -12,5 +12,10 @@
       .basic-layout-content {}
     }
 
+    @media (prefers-color-scheme: dark) {
+      .basic-layout {
+        background: #1d1d1d;
+      }
+    }
   }
 }
