--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -9,6 +9,7 @@
       min-height: 32px;
       max-height: 32px;
       padding: 0 16px;
+      gap: 16px;
       border-bottom: 1px solid rgba(144, 144, 144, .3);
     }
 
