--- a/src/pages/CCD/index.module.less
+++ b/src/pages/CCD/index.module.less
@@ -121,6 +121,8 @@
         &-canvas {
           height: 100%;
           position: relative;
+          background-size: 100% 100%;
+          background-position: 50% 50%;
 
           .move-item {
             position: absolute;
